--- a/wwwroot/scss/button-group.scss
+++ b/wwwroot/scss/button-group.scss
@@ -2,18 +2,33 @@
 
 .giz-button-group {
     display: $display-inline-block;
-    background-color: $secondary-light;
+    background-color: $dark-color;
+    border: 2px solid $border-color;
     padding: $spacer-4;
     border-radius: $rounded;
 
+    [light-theme] & {
+        background-color: $secondary-light;
+        border: 2px solid $secondary-light;
+    }
+
     .giz-button {
         color: $dim-light;
-        background-color: $secondary-light;
+        background-color: $dark-color;
+
+        [light-theme] & {
+            color: $dim-light;
+            background-color: $secondary-light;
+        }
 
         &.selected {
             color: $primary-color;
-            background-color: $white-color;
+            background-color: $border-color;
             box-shadow: $elevation-4;
+
+            [light-theme] & {
+                background-color: $white-color;
+            }
         }
     }
 }
